# gmail-streamer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: credentials-guide.md
profiles/example/: config.yaml
src/gmail_streamer/: auth.py  cli.py  config.py  gmail_client.py  paths.py  state.py  storage.py
