[project]
name = "gmail-streamer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "click",
    "pyyaml",
]

[project.scripts]
gmail-streamer = "gmail_streamer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_streamer"]
